--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "antd": "^5.4.6",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
+    "formik": "^2.2.9",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
